# wallpaper-downloader-rs

./: .rustfmt.toml  Cargo.toml  build.rs
src/: config.rs  danbooru.rs  image_dl.rs  main.rs  rating.rs  timer.rs  util.rs
web_ui/: Cargo.toml
