[package]
name = "wallpaper-downloader"
version = "0.1.0"
authors = ["F5XS <f5xs.0000a@gmail.com>"]

[dependencies]
reqwest = "*"
parking_lot = "*"
tokio-threadpool = "*"
serde = "1.0.78"
serde_derive = "1.0.78"
futures = "0.1.24"
chrono = "*"
ws = "*"
rocket = "*"
sekibanki = { git = "https://github.com/f5xs-0000a/sekibanki.git" }
